Dressup / Fixed the Hair style

--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -445,6 +445,9 @@
             width: max-content;
             height: auto;
             position: absolute;
+            path {
+                display: none;
+            }
         }
     }
     &__header {
