--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -430,25 +430,7 @@
 .dressup-modal {
     max-width: 950px;
     padding: 0px;
-    &-avatar {
-        width: 107.69px;
-        height: 82.28px;
-        position: relative;
-        text-align: center;
-        margin: auto;
-        padding: 0px;
-        .empty-avatar {
-            width: max-content;
-            height: auto;
-        }
-        .isolated-hair-style,
-        .isolated-facial-style,
-        .isolated-expression {
-            width: max-content;
-            height: auto;
-            position: absolute;
-        }
-    }
+
     &__header {
         display: flex;
         justify-content: end;
@@ -522,12 +504,13 @@
         & > div {
             height: 200px;
             width: 149px;
+            overflow: hidden;
             display: inline-block;
             float: none;
             & > img {
-                // width: 118.92px;
-                width: auto;
-                height: 92.28px;
+                min-width: 118.92px;
+                min-height: 92.28px;
+                object-fit: cover;
             }
         }
         &::-webkit-scrollbar {
@@ -538,6 +521,25 @@
         }
         &::-webkit-scrollbar-thumb {
             background: #ffffff !important;
+        }
+    }
+    &-avatar {
+        width: 107.69px;
+        height: 82.28px;
+        position: relative;
+        text-align: center;
+        margin: auto;
+        padding: 0px;
+        .empty-avatar {
+            width: max-content;
+            height: auto;
+        }
+        .isolated-hair-style,
+        .isolated-facial-style,
+        .isolated-expression {
+            width: max-content;
+            height: auto;
+            position: absolute;
         }
     }
 }
