--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -10,7 +10,7 @@
 body {
     background-color: $black;
     main {
-        overflow-x: hidden !important;
+        @extend %set-height;
     }
 }
 
