Dressup / Hats / Finished the hats section

--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -541,6 +541,7 @@
         text-align: center;
         margin: auto;
         padding: 0px;
+        margin-top: 75px;
         .empty-avatar {
             width: max-content;
             height: auto;
