Dressup / Other / Added the isolated assets

--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -546,9 +546,7 @@
             width: max-content;
             height: auto;
         }
-        .isolated-hair-style,
-        .isolated-facial-style,
-        .isolated-expression {
+        .isolated-icons {
             width: max-content;
             height: auto;
             position: absolute;
