--- a/src/styles/sass/page/_select_figure.scss
+++ b/src/styles/sass/page/_select_figure.scss
@@ -33,6 +33,7 @@
                 cursor: pointer;
                 &__avatar {
                     padding: 30px 10px;
+                    background-color: $black;
                 }
                 &__name {
                     padding: 8px 0;
@@ -44,6 +45,9 @@
                 }
                 &.active {
                     border: 1px solid white;
+                    .figure-item__avatar {
+                        background-color: $black;
+                    }
                     .figure-item__name {
                         background-color: white;
                         color: $black;
