--- a/src/styles/sass/components/_menu.scss
+++ b/src/styles/sass/components/_menu.scss
@@ -11,6 +11,7 @@
     }
     .user-dropdown {
         position: relative;
+        display: flex;
         &:hover {
             .user-dropdown-menu {
                 display: block;
