Dressup / Scroll Feature / Added smooth scrolling feature for the rows

--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -491,6 +491,7 @@
     }
 
     &-items-horizontal-list {
+        scroll-behavior: smooth;
         float: none;
         overflow-x: auto !important;
         white-space: nowrap;
@@ -525,10 +526,7 @@
             }
         }
         &::-webkit-scrollbar {
-            position: relative;
-            height: 3px !important;
-            bottom: -20px;
-            z-index: -999;
+            height: 0px !important;
         }
         &::-webkit-scrollbar-track {
             background: #666666 !important;
