--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -13,6 +13,7 @@
 @import "components/modal";
 @import "components/menu";
 @import "components/accordion";
+@import "components/loading";
 
 @import "layout/layout";
 
