--- a/src/styles/sass/page/_auction.scss
+++ b/src/styles/sass/page/_auction.scss
@@ -262,6 +262,7 @@
                     background: #1e1e1e;
                     border: 1px solid #ffffff;
                     border-radius: unset;
+                    box-shadow: unset;
                     .css-6j8wv5-Input,
                     .css-qc6sy-singleValue {
                         font-family: "Montserrat";
