--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -11,6 +11,7 @@ body {
     background-color: $black;
     main {
         @extend %set-height;
+        overflow-x: hidden !important;
     }
 }
 
