--- a/src/styles/sass/page/admin/_setting.scss
+++ b/src/styles/sass/page/admin/_setting.scss
@@ -117,7 +117,7 @@ main.admin-setting-page {
     form {
         input.black_input {
             height: 37px;
-            border: 1px solid hsl(0, 0, 80%);
+            border: 1px solid #cccccc;
         }
         p {
             margin-top: 15px;
