--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -57,3 +57,10 @@ input[type="number"]::-webkit-outer-spin-button {
 .overflow-y-hidden {
     overflow-y: hidden !important;
 }
+
+.btn-primary {
+    transition: 500ms;
+    &:hover {
+        opacity: 0.65;
+    }
+}
