setting/user tiers complete

--- a/src/styles/sass/page/admin/_users.scss
+++ b/src/styles/sass/page/admin/_users.scss
@@ -98,6 +98,7 @@ main.admin-users-page {
     form {
         p {
             color: lightgray;
+            margin-bottom: 1px;
         }        
         div.description {
             text-align: center;
